appId: com.marginallybetter.converter
---
- addMedia:
    - ../assets/waterfall.jpg
- stopApp
- launchApp:
    permissions:
      notifications: deny
- startRecording:
    path: iphone-screen
- waitForAnimationToEnd:
    timeout: 1200
- tapOn: "Photos"
- waitForAnimationToEnd:
    timeout: 700
- tapOn:
    text: "Photo, .*"
    index: 0
- waitForAnimationToEnd:
    timeout: 1200
- tapOn: "Output format"
- tapOn: "HEIC"
- waitForAnimationToEnd:
    timeout: 400
- tapOn: "Set target size to 1 megabytes"
- waitForAnimationToEnd:
    timeout: 600
- tapOn: "Convert"
- extendedWaitUntil:
    visible: "Conversion Complete"
    timeout: 20000
- waitForAnimationToEnd:
    timeout: 5000
- stopRecording
